DuPont DevSB/src/objects/pse__Rate_Card__c.object
<CustomObject>
    <customHelpPage>pse__RateCardHelp</customHelpPage>
    <description>Records the suggested bill rate or average cost rate for a resource role in a region, practice, or group (for example, the bill rate for a Consultant in Europe) or for projects on an account. Use rate cards early in the staffing process, to provide information on likely billing and cost rates when creating resource requests. If configured, start and end dates on rate cards determine if the rate only applies to resource requests which lie between the given dates.</description>
    <fields>
        <fullName>FF_PSA_Holdover_Bill_Rate__c</fullName>
        <label>Holdover Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Holdover_Cost_Rate__c</fullName>
        <label>Holdover Cost Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Training_Bill_Rate__c</fullName>
        <label>Training Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Training_Cost_Rate__c</fullName>
        <label>Training Cost Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Travel_Bill_Rate__c</fullName>
        <label>Travel Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Travel_Cost_Rate__c</fullName>
        <label>Travel Cost Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Ratecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Average Cost Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Cascading_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cascading Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <description>The rate card will no longer be applied after the date entered here. If you enter an end date, you must also enter a start date. If there is a start date and no end date, the rate card will be applied.</description>
        <inlineHelpText>The rate card will no longer be applied after the date entered here. If you enter an end date, you must also enter a start date. If there is a start date and no end date, the rate card will be applied.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipName>Ratecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipName>Ratecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipName>Ratecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Role__c</fullName>
        <label>Resource Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Mgr</fullName>
                </value>
                <value>
                    <fullName>Account Mgr Principal</fullName>
                </value>
                <value>
                    <fullName>Account Mgr Senior</fullName>
                </value>
                <value>
                    <fullName>BDM</fullName>
                </value>
                <value>
                    <fullName>BDM JUNIOR</fullName>
                </value>
                <value>
                    <fullName>BDM PRINCIPAL</fullName>
                </value>
                <value>
                    <fullName>BDM Senior</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>CONSULTANT ASSOCIATE</fullName>
                </value>
                <value>
                    <fullName>CONSULTANT PRINCIPAL</fullName>
                </value>
                <value>
                    <fullName>CONSULTANT SENIOR</fullName>
                </value>
                <value>
                    <fullName>CONSULTANT TRAINER</fullName>
                </value>
                <value>
                    <fullName>L&amp;D - Production</fullName>
                </value>
                <value>
                    <fullName>L&amp;D - Production Leader</fullName>
                </value>
                <value>
                    <fullName>Market/ Regional Leader</fullName>
                </value>
                <value>
                    <fullName>Other - Business Functions</fullName>
                </value>
                <value>
                    <fullName>Practice Leader</fullName>
                </value>
                <value>
                    <fullName>Practice SME</fullName>
                </value>
                <value>
                    <fullName>PROJECT CONTROLLER</fullName>
                </value>
                <value>
                    <fullName>PROJECT LEADER</fullName>
                </value>
                <value>
                    <fullName>PROJECT LEADER PRINCIPAL</fullName>
                </value>
                <value>
                    <fullName>PROJECT LEADER SENIOR</fullName>
                </value>
                <value>
                    <fullName>PROJECT SUPPORT</fullName>
                </value>
                <value>
                    <fullName>SCHEDULER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <description>The rate card will take effect on the date entered here.</description>
        <inlineHelpText>The rate card will take effect on the date entered here.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Suggested Bill Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <label>Rate Card</label>
    <listViews>
        <fullName>All_Rate_Cards</fullName>
        <columns>NAME</columns>
        <columns>pse__Average_Cost_Rate__c</columns>
        <columns>pse__Region__c</columns>
        <columns>pse__Role__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All Rate Cards</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Canada_Rate_Cards</fullName>
        <columns>NAME</columns>
        <columns>pse__Region__c</columns>
        <columns>pse__Average_Cost_Rate__c</columns>
        <columns>pse__Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pse__Region__c</field>
            <operation>equals</operation>
            <value>CANADA</value>
        </filters>
        <label>Canada_Rate Cards</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>USA_Rate_Cards</fullName>
        <columns>NAME</columns>
        <columns>pse__Average_Cost_Rate__c</columns>
        <columns>pse__Region__c</columns>
        <columns>pse__Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pse__Region__c</field>
            <operation>equals</operation>
            <value>UNITED STATES</value>
        </filters>
        <label>USA Rate Cards</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Region__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>pse__Role__c</columns>
        <columns>pse__Suggested_Bill_Rate__c</columns>
        <columns>pse__Average_Cost_Rate__c</columns>
        <columns>pse__Cascading_Role__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RC-{0}</displayFormat>
        <label>Rate Card Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Cards</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>pse__Rate_Card_May_Not_Have_Multiple_Targets</fullName>
        <active>true</active>
        <description>Rate Card must not reference more than one of the following: Account, Region, Practice, Group.</description>
        <errorConditionFormula>OR(AND(NOT(OR(ISNULL(pse__Account__c),(pse__Account__c=&apos;&apos;))),NOT(AND(OR(ISNULL(pse__Region__c),(pse__Region__c=&apos;&apos;)),OR(ISNULL(pse__Practice__c),(pse__Practice__c=&apos;&apos;)),OR(ISNULL(pse__Group__c),(pse__Group__c=&apos;&apos;))))),AND(NOT(OR(ISNULL(pse__Region__c),(pse__Region__c=&apos;&apos;))),NOT(AND(OR(ISNULL(pse__Account__c),(pse__Account__c=&apos;&apos;)),OR(ISNULL(pse__Practice__c),(pse__Practice__c=&apos;&apos;)),OR(ISNULL(pse__Group__c),(pse__Group__c=&apos;&apos;))))),AND(NOT(OR(ISNULL(pse__Practice__c),(pse__Practice__c=&apos;&apos;))),NOT(AND(OR(ISNULL(pse__Region__c),(pse__Region__c=&apos;&apos;)),OR(ISNULL(pse__Account__c),(pse__Account__c=&apos;&apos;)),OR(ISNULL(pse__Group__c),(pse__Group__c=&apos;&apos;))))),AND(NOT(OR(ISNULL(pse__Group__c),(pse__Group__c=&apos;&apos;))),NOT(AND(OR(ISNULL(pse__Region__c),(pse__Region__c=&apos;&apos;)),OR(ISNULL(pse__Practice__c),(pse__Practice__c=&apos;&apos;)),OR(ISNULL(pse__Account__c),(pse__Account__c=&apos;&apos;))))))</errorConditionFormula>
        <errorMessage>Rate Card must not reference more than one of the following: Account, Region, Practice, Group.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Start_Date_must_be_before_End_Date</fullName>
        <active>true</active>
        <description>The start date must be before the end date.</description>
        <errorConditionFormula>pse__End_Date__c &lt; pse__Start_Date__c</errorConditionFormula>
        <errorMessage>The start date must be before the end date.</errorMessage>
    </validationRules>
</CustomObject>